# api/handlers/v1/register.go
@@ -7,25 +7,25 @@ import (
 	"github.com/saidamir98/goauth_service/pkg/util"
 )
 
-// CreateUser godoc
-// @ID create-user
-// @Router /v1/auth/user [POST]
-// @Tags user
-// @Summary create user
-// @Description create user
+// RegisterUser godoc
+// @ID register-user
+// @Router /v1/auth/user/register [POST]
+// @Tags register
+// @Summary register user
+// @Description register user
 // @Accept json
-// @Param input body rest.CreateUserModel true "body"
+// @Param input body rest.RegisterUserModel true "body"
 // @Produce json
 // @Success 200 {object} rest.ResponseModel{data=string} "Success"
 // @Response 422 {object} rest.ResponseModel{error=string} "Validation Error"
 // @Response 400 {object} rest.ResponseModel{error=string} "Bad Request"
 // @Failure 500 {object} rest.ResponseModel{error=string} "Server Error"
-func (h *Handler) CreateUser(c *gin.Context) {
+func (h *Handler) RegisterUser(c *gin.Context) {
 	var (
-		entity rest.CreateUserModel
+		entity rest.RegisterUserModel
 	)
-
 	err := c.ShouldBindJSON(&entity)
+
 	if err != nil {
 		h.handleErrorResponse(c, 400, "parse error", err)
 		return
@@ -63,6 +63,17 @@ func (h *Handler) CreateUser(c *gin.Context) {
 		return
 	}
 
+	clientType, err := h.storageCassandra.ClientType().GetByID(entity.ClientTypeID)
+	if err != nil {
+		h.handleErrorResponse(c, 500, "database error", err.Error())
+		return
+	}
+
+	if !clientType.SelfRegister {
+		h.handleErrorResponse(c, 400, "bad request", "this client type cannot self register")
+		return
+	}
+
 	hashedPassword, err := security.HashPassword(entity.Password)
 	if err != nil {
 		h.handleErrorResponse(c, 500, "server error", err.Error())
@@ -70,57 +81,15 @@ func (h *Handler) CreateUser(c *gin.Context) {
 	}
 
 	entity.Password = hashedPassword
+	entity.Active = 0
 
-	userID, err := h.storageCassandra.User().Create(entity)
+	userID, err := h.storageCassandra.Auth().RegisterUser(entity)
 	if err != nil {
 		h.handleErrorResponse(c, 400, "database error", err.Error())
 		return
 	}
 
 	entity.ID = userID
-
-	h.handleSuccessResponse(c, 200, "ok", entity.ID)
-}
-
-// UpdateUser godoc
-// @ID update-user
-// @Router /v1/auth/user [PUT]
-// @Tags user
-// @Summary update user
-// @Description update user
-// @Accept json
-// @Param input body rest.UpdateUserModel true "body"
-// @Produce json
-// @Success 200 {object} rest.ResponseModel{data=string} "Success"
-// @Response 422 {object} rest.ResponseModel{error=string} "Validation Error"
-// @Response 400 {object} rest.ResponseModel{error=string} "Bad Request"
-// @Failure 500 {object} rest.ResponseModel{error=string} "Server Error"
-func (h *Handler) UpdateUser(c *gin.Context) {
-	var (
-		entity rest.UpdateUserModel
-	)
-
-	err := c.ShouldBindJSON(&entity)
-	if err != nil {
-		h.handleErrorResponse(c, 400, "parse error", err)
-		return
-	}
-
-	if !util.IsValidUUID(entity.ClientTypeID) {
-		h.handleErrorResponse(c, 422, "validation error", "client_type_id")
-		return
-	}
-
-	if !util.IsValidUUID(entity.RoleID) {
-		h.handleErrorResponse(c, 422, "validation error", "role_id")
-		return
-	}
-
-	err = h.storageCassandra.User().Update(entity)
-	if err != nil {
-		h.handleErrorResponse(c, 400, "database error", err.Error())
-		return
-	}
 
 	h.handleSuccessResponse(c, 200, "ok", entity.ID)
 }
